--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ dnspython==2.7.0
 docx2txt==0.9
 dotenv==0.9.9
 faiss-cpu==1.11.0
+filelock==3.18.0
 frozenlist==1.6.0
+fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.16.0
@@ -40,14 +42,20 @@ langchain-community==0.3.24
 langchain-core==0.3.61
 langchain-text-splitters==0.3.8
 langsmith==0.3.42
+llvmlite==0.44.0
 lxml==5.4.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+more-itertools==10.7.0
+mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
 narwhals==1.40.0
+networkx==3.5
+numba==0.61.2
 numpy==2.2.6
 openai==1.82.0
+openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
 orjson==3.10.18
 packaging==24.2
 pandas==2.2.3
@@ -75,14 +83,17 @@ regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.25.1
+setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 streamlit==1.45.1
+sympy==1.14.0
 tenacity==9.1.2
 tiktoken==0.9.0
 toml==0.10.2
+torch==2.7.1
 tornado==6.5.1
 tqdm==4.67.1
 typing-inspect==0.9.0
@@ -90,6 +101,5 @@ typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
-whisper==1.1.10
 yarl==1.20.0
 zstandard==0.23.0
