--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -5,3 +5,9 @@ backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
 font="sans serif"
+
+
+[server]
+maxUploadSize = 200
+enableCORS = false
+headless = true
