--- a/requirements.txt
+++ b/requirements.txt
@@ -7,25 +7,33 @@ anyio==4.9.0
 attrs==25.3.0
 azure-core==1.34.0
 azure-storage-blob==12.25.1
+beautifulsoup4==4.13.4
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+contourpy==1.3.2
 cryptography==45.0.3
+cycler==0.12.1
 dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.7.0
 docx2txt==0.9
 dotenv==0.9.9
+entrypoints==0.4
 faiss-cpu==1.11.0
+Faker==37.4.0
+favicon==0.7.0
 filelock==3.18.0
+fonttools==4.58.4
 frozenlist==1.6.0
 fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.16.0
+htbuilder==0.9.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.0
@@ -37,15 +45,19 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
 langchain==0.3.25
-langchain-community==0.3.24
-langchain-core==0.3.61
+langchain-community==0.3.25
+langchain-core==0.3.65
 langchain-text-splitters==0.3.8
-langsmith==0.3.42
+langsmith==0.3.45
 llvmlite==0.44.0
 lxml==5.4.0
+Markdown==3.8.2
+markdownlit==0.0.7
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib==3.10.3
 more-itertools==10.7.0
 mpmath==1.3.0
 multidict==6.4.4
@@ -62,6 +74,8 @@ pandas==2.2.3
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.2.1
+plotly==6.1.2
+prometheus_client==0.22.1
 propcache==0.3.1
 protobuf==6.31.0
 pyarrow==20.0.0
@@ -70,8 +84,9 @@ pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pydeck==0.9.1
-
+pymdown-extensions==10.15
 pymongo==4.13.0
+pyparsing==3.2.3
 pypdfium2==4.30.1
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
@@ -88,8 +103,22 @@ setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.41
+st-annotated-text==4.0.2
+st-theme==1.2.3
 streamlit==1.45.1
+streamlit-avatar==0.1.3
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras>=0.2.0
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.9
+streamlit-javascript==0.1.5
+streamlit-keyup==0.3.0
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
 sympy==1.14.0
 tenacity==9.1.2
 tiktoken==0.9.0
@@ -102,5 +131,6 @@ typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+validators==0.35.0
 yarl==1.20.0
 zstandard==0.23.0
