--- a/requirements.txt
+++ b/requirements.txt
@@ -99,7 +99,6 @@ regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.25.1
-setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -111,8 +110,8 @@ streamlit==1.45.1
 streamlit-avatar==0.1.3
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
+streamlit-cookies-manager==0.2.0
 streamlit-embedcode==0.1.2
-streamlit-extras>=0.2.0
 streamlit-faker==0.0.3
 streamlit-image-coordinates==0.1.9
 streamlit-javascript==0.1.5
