--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ langchain-core==0.3.65
 langchain-text-splitters==0.3.8
 langsmith==0.3.45
 llvmlite==0.44.0
+lottie==0.7.2
 lxml==5.4.0
 Markdown==3.8.2
 markdownlit==0.0.7
@@ -99,6 +100,7 @@ regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.25.1
+setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -112,12 +114,15 @@ streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
 streamlit-cookies-manager==0.2.0
 streamlit-embedcode==0.1.2
+streamlit-extras==0.6.0
 streamlit-faker==0.0.3
 streamlit-image-coordinates==0.1.9
 streamlit-javascript==0.1.5
 streamlit-keyup==0.3.0
+streamlit-lottie==0.0.5
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==2.5.5
+stripe==12.2.0
 sympy==1.14.0
 tenacity==9.1.2
 tiktoken==0.9.0
