--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ pyparsing==3.2.3
 pypdfium2==4.30.1
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-docx==1.1.2
 python-dotenv==1.1.0
 pytz==2025.2
@@ -109,10 +110,10 @@ SQLAlchemy==2.0.41
 st-annotated-text==4.0.2
 st-theme==1.2.3
 streamlit==1.45.1
+streamlit-aggrid==1.1.5.post1
 streamlit-avatar==0.1.3
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
-
 streamlit-cookies-manager==0.2.0
 streamlit-embedcode==0.1.2
 streamlit-extras==0.6.0
