--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ frozenlist==1.6.0
 fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.2.3
 h11==0.16.0
 htbuilder==0.9.0
 httpcore==1.0.9
@@ -75,6 +76,7 @@ pandas==2.2.3
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.2.1
+playwright==1.53.0
 plotly==6.1.2
 prometheus_client==0.22.1
 propcache==0.3.1
@@ -85,8 +87,10 @@ pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pydeck==0.9.1
+pyee==13.0.0
 pymdown-extensions==10.15
 pymongo==4.13.0
+PyMuPDF==1.26.1
 pyparsing==3.2.3
 pypdfium2==4.30.1
 pytesseract==0.3.13
