--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+av==14.4.0
 azure-core==1.34.0
 azure-storage-blob==12.25.1
 beautifulsoup4==4.13.4
@@ -14,8 +15,10 @@ certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+coloredlogs==15.0.1
 contourpy==1.3.2
 cryptography==45.0.3
+ctranslate2==4.6.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 distro==1.9.0
@@ -25,8 +28,10 @@ dotenv==0.9.9
 entrypoints==0.4
 faiss-cpu==1.11.0
 Faker==37.4.0
+faster-whisper==1.1.1
 favicon==0.7.0
 filelock==3.18.0
+flatbuffers==25.2.10
 fonttools==4.58.4
 frozenlist==1.6.0
 fsspec==2025.5.1
@@ -34,10 +39,13 @@ gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.3
 h11==0.16.0
+hf-xet==1.1.5
 htbuilder==0.9.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.0
+huggingface-hub==0.33.1
+humanfriendly==10.0
 idna==3.10
 isodate==0.7.2
 Jinja2==3.1.6
@@ -68,6 +76,7 @@ narwhals==1.40.0
 networkx==3.5
 numba==0.61.2
 numpy==2.2.6
+onnxruntime==1.22.0
 openai==1.82.0
 openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
 orjson==3.10.18
@@ -132,6 +141,7 @@ stripe==12.2.0
 sympy==1.14.0
 tenacity==9.1.2
 tiktoken==0.9.0
+tokenizers==0.21.2
 toml==0.10.2
 torch==2.7.1
 tornado==6.5.1
