--- a/requirements.txt
+++ b/requirements.txt
@@ -20,17 +20,21 @@ contourpy==1.3.2
 cryptography==45.0.3
 ctranslate2==4.6.0
 cycler==0.12.1
+dash==3.1.0
+dash-bootstrap-components==2.0.3
 dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.7.0
 docx2txt==0.9
 dotenv==0.9.9
 entrypoints==0.4
+et_xmlfile==2.0.0
 faiss-cpu==1.11.0
 Faker==37.4.0
 faster-whisper==1.1.1
 favicon==0.7.0
 filelock==3.18.0
+Flask==3.1.1
 flatbuffers==25.2.10
 fonttools==4.58.4
 frozenlist==1.6.0
@@ -40,6 +44,7 @@ GitPython==3.1.44
 greenlet==3.2.3
 h11==0.16.0
 hf-xet==1.1.5
+hikerapi==1.7.1
 htbuilder==0.9.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -47,7 +52,9 @@ httpx-sse==0.4.0
 huggingface-hub==0.33.1
 humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.7.0
 isodate==0.7.2
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
 jsonpatch==1.33
@@ -73,12 +80,14 @@ mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
 narwhals==1.40.0
+nest-asyncio==1.6.0
 networkx==3.5
 numba==0.61.2
 numpy==2.2.6
 onnxruntime==1.22.0
 openai==1.82.0
 openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
+openpyxl==3.1.5
 orjson==3.10.18
 packaging==24.2
 pandas==2.2.3
@@ -113,6 +122,7 @@ referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+retrying==1.4.0
 rpds-py==0.25.1
 setuptools==80.9.0
 six==1.17.0
@@ -144,6 +154,7 @@ tiktoken==0.9.0
 tokenizers==0.21.2
 toml==0.10.2
 torch==2.7.1
+torchaudio==2.7.1
 tornado==6.5.1
 tqdm==4.67.1
 typing-inspect==0.9.0
@@ -152,5 +163,7 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 validators==0.35.0
+Werkzeug==3.1.3
 yarl==1.20.0
+zipp==3.23.0
 zstandard==0.23.0
