partial done theme runner for agents outputs

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 MONGO_URI="mongodb+srv://dlovej009:Dheeraj2006@cluster0.dnu8vna.mongodb.net/?retryWrites=true&w=majority"
+a=""
+b="-"
+c=""
+d=""
+e=""
+f=""
+g=""
+h=""
+i=""
+
+aii="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"
