--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ azure-storage-blob==12.25.1
 beautifulsoup4==4.13.4
 blinker==1.9.0
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
@@ -39,6 +39,7 @@ flatbuffers==25.2.10
 fonttools==4.58.4
 frozenlist==1.6.0
 fsspec==2025.5.1
+fuzzywuzzy==0.18.0
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.3
@@ -57,6 +58,7 @@ isodate==0.7.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -89,6 +91,7 @@ openai==1.82.0
 openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
 openpyxl==3.1.5
 orjson==3.10.18
+outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 pdfminer.six==20250327
@@ -110,7 +113,9 @@ pymdown-extensions==10.15
 pymongo==4.13.0
 PyMuPDF==1.26.1
 pyparsing==3.2.3
+PyPDF2==3.0.1
 pypdfium2==4.30.1
+PySocks==1.7.1
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
 python-decouple==3.8
@@ -124,10 +129,16 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 retrying==1.4.0
 rpds-py==0.25.1
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+selenium==4.34.2
+sentence-transformers==5.0.0
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.7
 SQLAlchemy==2.0.41
 st-annotated-text==4.0.2
@@ -150,6 +161,7 @@ streamlit-vertical-slider==2.5.5
 stripe==12.2.0
 sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.2
 toml==0.10.2
@@ -157,13 +169,18 @@ torch==2.7.1
 torchaudio==2.7.1
 tornado==6.5.1
 tqdm==4.67.1
+transformers==4.53.1
+trio==0.30.0
+trio-websocket==0.12.2
 typing-inspect==0.9.0
 typing-inspection==0.4.1
-typing_extensions==4.13.2
+typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.4.0
+urllib3==2.5.0
 validators==0.35.0
+websocket-client==1.8.0
 Werkzeug==3.1.3
+wsproto==1.2.0
 yarl==1.20.0
 zipp==3.23.0
 zstandard==0.23.0
